# pcx-ai-toolkit

./: .clinerules  .editorconfig  .gitattributes  .gitignore  .gitmodules  .windsurfrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SuggestionsEnma.txt  package.json  pyproject.toml  setup.ps1  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_update.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  doc-drift.yml  publish-mcp.yml  release-vs.yml  release.yml  security.yml
docs/: AI_AGENT_OPERATING_MANUAL.md  COUNTS.json  COVERAGE.json  COVERAGE.md  CROSS_LANGUAGE.md  FAQ.md  INDEX.md  NAVIGATION.md  PROVENANCE.json  WORKFLOW_COOKBOOK.md  cli-reference.md  distribution-checklist.md  llms-full.txt  llms-knowledge.md  llms-perception-angelscript.md  llms-perception-enma.md  llms-perception-lua.md  llms-skills.md  llms.txt  marketplace-install.md  mcp-safety.md  mcp-tool-reference.md  production-readiness-followups.md
docs/angelscript/: quickstart.md
docs/angelscript-lang/: INDEX.md  addon-array.md  addon-dictionary.md  addon-math.md  addon-strings.md  addons-overview.md  arrays.md  coroutines.md  datatypes.md  delegate.md  dictionary.md  enums.md  expressions.md  funcdef.md  functions.md  generics.md  handles.md  inheritance.md  license.md  namespaces.md  overview.md  script-class-props.md  script-class.md  statements.md  strings.md  variables.md
docs/enma/: UPSTREAM-SUGGESTIONS.md  addon-arrays.md  addon-atomic.md  addon-bits.md  addon-core.md  addon-file.md  addon-hash_set.md  addon-json.md  addon-list.md  (+42 more)
evals/: hallucination-regression.json  model-compatibility.json  perception-mcp-workflows.json
examples/: README.md
installers/: ida-pro_93_armlinux.run  ida-pro_93_x64linux.run  install.ps1  install.sh  keygen.js
knowledge/: aimbot-math.md  angelscript-cheatsheet.md  anti-cheat-architecture.md  cheat-script-cookbook.md  common-patterns.md  community-tools.md  custom-draw-patterns.md  deobfuscation-tools.md  deprecated-symbols.json  engine-cryengine.md  engine-frostbite.md  engine-godot.md  engine-re-engine.md  engine-redengine.md  enma-addon-imports.json  enma-cheatsheet.md  game-targets.md  gui-design-patterns.md  kernel-re-tools.md  language-modes.json  lua-cheatsheet.md  mcp-schema-rules.json  network-protocol-re.md  obfuscation-taxonomy.md  offset-methodology.md  pcx-api-cheatsheet.md  pcx-api-index.json  pcx-cross-language-bridge.md  pcx-doc-roots.md  pcx-version-matrix.md  perception-forum-insights.md  perception-symbol-versions.json  permission-rules.json  re-plugins-and-tools.md  repair-templates.json  script-organization-patterns.md  unsupported-symbols.json  vmprotect2-analysis.md
mcp/: aider-setup.md  binary-analysis-setup.md  claude-code-setup.md  continue-setup.md  cursor-setup.md  neovim-setup.md  perception-mcp-config.json  perception-mcp-examples.json  setup-binary-analysis.ps1  setup-binary-analysis.sh  zed-setup.md
mcp/pcx-knowledge-mcp/: PUBLISHING.md  README.md  TROUBLESHOOTING.md  pyproject.toml  server.py
rules/: AGENTS.md  CLAUDE.md  CLINE.md  COPILOT.md  CURSOR.md  KARPATHY.md  WINDSURF.md
schemas/: api-lookup.schema.json  explain-finding.schema.json  generate-script-plan.schema.json  pcx-evidence-graph.schema.json  perception-symbol-versions.schema.json  recommend-context.schema.json  scaffold-plan.schema.json  search-docs.schema.json  validate-code.schema.json  validation-finding.schema.json
templates/: README.md  aimbot-skeleton.em  angelscript-overlay.as  hello-world.em  lua-overlay.lua  minimap.em  overlay-basic.em
tests/: test_all_markdown_links.py  test_api_index.py  test_api_lookup.py  test_auto_release.py  test_backengineering_knowledge.py  test_check_llm_answer.py  test_coverage_dashboard.py  test_distribution.py  test_doc_drift_json.py  test_enma_docs_coverage.py  test_evidence_graph.py  test_evidence_graph_integrity.py  test_knowledge_index.py  test_live_perception_mcp.py  test_mcp_package.py  test_mcp_validate_code.py  test_mcp_workflow_static_tool.py  test_mock_perception_mcp.py  test_model_eval.py  test_perception_mcp_contract.py  test_perception_mcp_result_schemas.py  test_perception_mcp_workflow_evals.py  test_perception_mcp_workflow_static_validation.py  test_project_workflow.py  test_re_plan.py  test_release_check.py  test_scenarios.py  test_skill_contracts.py  test_skills_tool.py  test_symbol_check.py  test_symbol_metadata.py  test_task_docs.py  test_update_command.py
tools/: __init__.py  analyze-vmprotect.py  anti-debug-scanner.py  api-lookup.py  as-linter.py  auto-release.py  binary-diff-summary.py  build-api-index.py  build-counts.py  build-coverage-dashboard.py  build-enma-addon-metadata.py  build-llms-index.py  build-provenance.py  check-doc-drift.py  check-internal-links.py  check-llm-answer.py  check-llm-contract.py  check-mcp-config.py  check-mcp-workflows.py  check-skill-contract.py  check-version-matrix.py  dump-strings-xor.py  dumper-to-enma.py  evidence-log-validator.py  evidence.py  hallucination-eval.py  identify-protector.py  install-re-tools.sh  knowledge-index.py  mock-perception-mcp.py  model-eval.py  module-export-mapper.py  offset-diff.py  package-vsix.sh  pattern-format-converter.py  pcx  pcx.cmd  pcx.py  pe-section-analyzer.py  perception-mcp-doctor.py  (+17 more)
tools/pe-parser/: Cargo.toml
tools/pe-parser/crates/pcx-cli/: Cargo.toml
tools/pe-parser/crates/pcx-cli/src/: lib.rs
tools/pe-parser/crates/pcx-core/: Cargo.toml
tools/pe-parser/crates/pcx-core/src/: lib.rs
tools/pe-parser/crates/pcx-mcp/: Cargo.toml
tools/pe-parser/crates/pcx-mcp/src/: lib.rs
tools/pe-parser/crates/pcx-re-tools/: Cargo.toml
tools/pe-parser/crates/pcx-re-tools/src/: lib.rs
tools/pe-parser/src/: api_index.rs  check_matrix.rs  check_mcp.rs  docs_pipeline.rs  lib.rs  main.rs  mcp_schema.rs  validators.rs
tools/pe-parser/tests/: cli.rs  mcp_schema.rs  public_binaries.rs  rust_only.rs  validators.rs
visualstudio/: README.md
(+297 files in other folders)
