[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "tools.lib.*"
strict = true

[[tool.mypy.overrides]]
module = [
    "tools.anti-debug-scanner",
    "tools.binary-diff-summary",
    "tools.build-counts",
    "tools.build-llms-index",
    "tools.build-provenance",
    "tools.check-doc-drift",
    "tools.check-mcp-config",
    "tools.check-version-matrix",
    "tools.dump-strings-xor",
    "tools.dumper-to-enma",
    "tools.evidence-log-validator",
    "tools.identify-protector",
    "tools.module-export-mapper",
    "tools.offset-diff",
    "tools.pattern-format-converter",
    "tools.pcx",
    "tools.pe-section-analyzer",
    "tools.resolve-api-hashes",
    "tools.script-linter",
    "tools.sig-uniqueness-checker"
]
ignore_errors = true

[tool.pyright]
include = ["tools/lib"]
exclude = ["**/node_modules", "**/__pycache__", "lsp", "visualstudio"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcx-ai-toolkit"
version = "1.16.0"
description = "Source-grounded Enma and AngelScript toolkit for Perception.cx"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
pcx = "tools.pcx:main"

[project.urls]
Homepage = "https://github.com/VoidChecksum/pcx-ai-toolkit"
Issues = "https://github.com/VoidChecksum/pcx-ai-toolkit/issues"

[tool.setuptools]
packages = ["tools", "tools.lib"]
