[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "tools.lib.*"
strict = true

[[tool.mypy.overrides]]
module = [
    "tools.anti-debug-scanner",
    "tools.binary-diff-summary",
    "tools.build-counts",
    "tools.build-llms-index",
    "tools.build-provenance",
    "tools.check-doc-drift",
    "tools.check-mcp-config",
    "tools.check-version-matrix",
    "tools.dump-strings-xor",
    "tools.dumper-to-enma",
    "tools.evidence-log-validator",
    "tools.hallucination-eval",
    "tools.identify-protector",
    "tools.module-export-mapper",
    "tools.offset-diff",
    "tools.pattern-format-converter",
    "tools.pcx",
    "tools.pe-section-analyzer",
    "tools.resolve-api-hashes",
    "tools.re-importer",
    "tools.regenerate-docs",
    "tools.script-linter",
    "tools.sig-uniqueness-checker",
    "tools.verify-project"
]
ignore_errors = true

[tool.pyright]
include = ["tools/lib"]
exclude = ["**/node_modules", "**/__pycache__", "lsp", "visualstudio"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcx-ai-toolkit"
version = "1.18.0"
description = "Source-grounded Enma toolkit for Perception.cx"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
pcx = "tools.pcx:main"

[project.urls]
Homepage = "https://github.com/VoidChecksum/pcx-ai-toolkit"
Issues = "https://github.com/VoidChecksum/pcx-ai-toolkit/issues"

[tool.setuptools]
packages = ["tools", "tools.lib"]
include-package-data = true

[tool.setuptools.data-files]
"." = ["VERSION", "README.md", "LICENSE"]
"knowledge" = ["knowledge/pcx-api-index.json", "knowledge/unsupported-symbols.json", "knowledge/permission-rules.json", "knowledge/deprecated-symbols.json", "knowledge/mcp-schema-rules.json"]
"templates" = ["templates/*.em", "templates/*.md"]
"templates/full-project" = ["templates/full-project/*.em"]
"templates/cheat-skeleton-em" = ["templates/cheat-skeleton-em/*.em", "templates/cheat-skeleton-em/*.md"]
"docs" = ["docs/COUNTS.json", "docs/COVERAGE.json", "docs/COVERAGE.md", "docs/llms.txt", "docs/llms-perception-enma.md"]
"evals" = ["evals/*.json"]
"tools" = ["tools/update-toolkit.sh", "tools/update-toolkit.ps1"]
"pcx-bin" = ["pcx-bin/pcx-rs"]
