[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pcx-knowledge-mcp"
version = "1.0.0"
description = "MCP server exposing the Enma and AngelScript pcx-ai-toolkit corpus for AI tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
pcx-knowledge-mcp = "server:main"

[project.urls]
Repository = "https://github.com/VoidChecksum/pcx-ai-toolkit"
Issues = "https://github.com/VoidChecksum/pcx-ai-toolkit/issues"

[tool.setuptools]
py-modules = ["server"]
