[package]
name = "pe-parser"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    ".",
    "crates/pcx-cli",
    "crates/pcx-core",
    "crates/pcx-mcp",
    "crates/pcx-re-tools",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.8"

[workspace.metadata.pcx]
public-binaries = [
    "pe-parser",
    "pcx-rs",
    "api-lookup",
    "pattern-format-converter",
    "sig-uniqueness-checker",
    "binary-diff-summary",
    "offset-diff",
    "anti-debug-scanner",
    "identify-protector",
    "pe-section-analyzer",
    "analyze-vmprotect",
    "dump-strings-xor",
    "module-export-mapper",
]
future-crates = [
    "pcx-core",
    "pcx-cli",
    "pcx-mcp",
    "pcx-re-tools",
]
